--- a/IOSModelBay/Views&Controllers/Profile/Ablum/Views/MB_AlbumTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Profile/Ablum/Views/MB_AlbumTableViewCell.xib
@@ -129,7 +129,7 @@
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rd1-DZ-8pK">
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rd1-DZ-8pK">
                         <rect key="frame" x="275" y="360" width="21" height="22"/>
                         <state key="normal" image="ic_share">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
