--- a/IOSModelBay/Views&Controllers/Profile/Summary/Views/MB_EditColorTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Profile/Summary/Views/MB_EditColorTableViewCell.xib
@@ -19,21 +19,21 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="KnL-t4-Dj3">
-                        <rect key="frame" x="12" y="11" width="21" height="21"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KnL-t4-Dj3">
+                        <rect key="frame" x="12" y="15" width="14" height="14"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="21" id="HQo-5d-zvp"/>
-                            <constraint firstAttribute="height" constant="21" id="qt3-Yn-JFK"/>
+                            <constraint firstAttribute="width" constant="14" id="HQo-5d-zvp"/>
+                            <constraint firstAttribute="height" constant="14" id="qt3-Yn-JFK"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F53-wn-QIR">
-                        <rect key="frame" x="45" y="14" width="35" height="16"/>
+                        <rect key="frame" x="41" y="14" width="35" height="16"/>
                         <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="13"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_xuanze" translatesAutoresizingMaskIntoConstraints="NO" id="Efd-eH-6Md">
-                        <rect key="frame" x="289" y="11" width="21" height="21"/>
+                        <rect key="frame" x="286" y="11" width="21" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="21" id="VOZ-BP-ou6"/>
                             <constraint firstAttribute="height" constant="21" id="pQ5-h4-WDL"/>
@@ -42,11 +42,11 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="centerY" secondItem="Efd-eH-6Md" secondAttribute="centerY" id="JYG-6n-YOr"/>
-                    <constraint firstItem="F53-wn-QIR" firstAttribute="leading" secondItem="KnL-t4-Dj3" secondAttribute="trailing" constant="12" id="WP0-9P-8UN"/>
+                    <constraint firstItem="F53-wn-QIR" firstAttribute="leading" secondItem="KnL-t4-Dj3" secondAttribute="trailing" constant="15" id="WP0-9P-8UN"/>
                     <constraint firstAttribute="centerY" secondItem="KnL-t4-Dj3" secondAttribute="centerY" id="lvI-eC-Bhh"/>
                     <constraint firstAttribute="centerY" secondItem="F53-wn-QIR" secondAttribute="centerY" id="rPp-4f-aey"/>
                     <constraint firstItem="KnL-t4-Dj3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="vrd-dq-eQd"/>
-                    <constraint firstAttribute="trailing" secondItem="Efd-eH-6Md" secondAttribute="trailing" constant="10" id="zup-dn-6np"/>
+                    <constraint firstAttribute="trailing" secondItem="Efd-eH-6Md" secondAttribute="trailing" constant="13" id="zup-dn-6np"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -57,7 +57,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="a.png" width="30" height="30"/>
         <image name="ic_xuanze" width="21" height="21"/>
     </resources>
 </document>
