--- a/IOSModelBay/Views&Controllers/MakeAlbum/Views/MB_selectPhotosCollectViewCell.xib
+++ b/IOSModelBay/Views&Controllers/MakeAlbum/Views/MB_selectPhotosCollectViewCell.xib
@@ -13,8 +13,9 @@
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="b.png" translatesAutoresizingMaskIntoConstraints="NO" id="eKz-9k-Wzc">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eKz-9k-Wzc">
                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.8901960784313725" blue="0.8901960784313725" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo_select" translatesAutoresizingMaskIntoConstraints="NO" id="rtj-Rb-hgK">
                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
@@ -39,7 +40,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="b.png" width="20" height="20"/>
-        <image name="photo_select" width="105" height="105"/>
+        <image name="photo_select" width="106" height="106"/>
     </resources>
 </document>
