--- a/IOSModelBay/Views&Controllers/Profile/Summary/Views/MB_IntroduceTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Profile/Summary/Views/MB_IntroduceTableViewCell.xib
@@ -22,12 +22,15 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yFk-RL-LrL">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="edit_sjieshao" translatesAutoresizingMaskIntoConstraints="NO" id="u4d-wf-1ec">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="u4d-wf-1ec">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ome-en-J4c">
-                                <rect key="frame" x="12" y="2" width="297" height="61"/>
+                                <rect key="frame" x="12" y="0.0" width="297" height="65"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="43" id="bd1-iO-SWf"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="CenturyGothic-Italic" family="Century Gothic" pointSize="12"/>
                                 <color key="textColor" red="0.27450980392156865" green="0.27450980392156865" blue="0.27450980392156865" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -37,8 +40,8 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="u4d-wf-1ec" secondAttribute="trailing" id="8GT-e8-NAV"/>
                             <constraint firstItem="u4d-wf-1ec" firstAttribute="leading" secondItem="yFk-RL-LrL" secondAttribute="leading" id="BeX-Rc-EaT"/>
-                            <constraint firstAttribute="bottom" secondItem="Ome-en-J4c" secondAttribute="bottom" constant="2" id="FFM-Ra-he6"/>
-                            <constraint firstItem="Ome-en-J4c" firstAttribute="top" secondItem="yFk-RL-LrL" secondAttribute="top" constant="2" id="Ouc-al-DaL"/>
+                            <constraint firstAttribute="bottom" secondItem="Ome-en-J4c" secondAttribute="bottom" id="FFM-Ra-he6"/>
+                            <constraint firstItem="Ome-en-J4c" firstAttribute="top" secondItem="yFk-RL-LrL" secondAttribute="top" id="Ouc-al-DaL"/>
                             <constraint firstAttribute="bottom" secondItem="u4d-wf-1ec" secondAttribute="bottom" id="Pce-2H-0ik"/>
                             <constraint firstAttribute="trailing" secondItem="Ome-en-J4c" secondAttribute="trailing" constant="11" id="Rak-77-Pab"/>
                             <constraint firstItem="u4d-wf-1ec" firstAttribute="top" secondItem="yFk-RL-LrL" secondAttribute="top" id="bfx-rm-INA"/>
@@ -60,7 +63,4 @@
             </connections>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="edit_sjieshao" width="299" height="43"/>
-    </resources>
 </document>
