--- a/IOSModelBay/Views&Controllers/ScanAblum/Views/MB_CommentTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/ScanAblum/Views/MB_CommentTableViewCell.xib
@@ -17,8 +17,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="xWH-4n-B9p" customClass="MB_CommentTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="96" id="xWH-4n-B9p" customClass="MB_CommentTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="96"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xWH-4n-B9p" id="PRD-Yw-6SO">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -38,8 +38,8 @@
                         <color key="textColor" red="0.1333333333" green="0.1333333333" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message:cxzcxzczxczx\ndfdsf" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0uV-0V-2hO">
-                        <rect key="frame" x="56" y="34" width="160" height="14"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message:cxzcxzczxczx\ndfdsfzcxnvxcmvnxcmvmxcnvxcnvmnxmvnmxcvxcv" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0uV-0V-2hO">
+                        <rect key="frame" x="56" y="34" width="240" height="41"/>
                         <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="11"/>
                         <color key="textColor" red="0.53333333329999999" green="0.53333333329999999" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -55,6 +55,7 @@
                     </imageView>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="0uV-0V-2hO" secondAttribute="trailing" constant="20" id="2aM-Io-gUn"/>
                     <constraint firstItem="hnE-Ok-u5V" firstAttribute="leading" secondItem="PRD-Yw-6SO" secondAttribute="leading" constant="12" id="778-Cg-FSS"/>
                     <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="0uV-0V-2hO" secondAttribute="bottom" constant="12" id="Am8-vJ-bbW"/>
                     <constraint firstItem="iWg-2L-SEg" firstAttribute="centerY" secondItem="WN7-Fk-CkW" secondAttribute="centerY" id="Cpa-h8-J5s"/>
@@ -80,6 +81,7 @@
                 <outlet property="userImageView" destination="hnE-Ok-u5V" id="Ksx-La-cMy"/>
                 <outlet property="usernameLabel" destination="gr5-Pb-1lb" id="251-cc-DgA"/>
             </connections>
+            <point key="canvasLocation" x="426" y="328"/>
         </tableViewCell>
     </objects>
     <resources>
